src/test/ui/or-patterns/exhaustiveness-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:8:9
   |
LL |         (1,) => {}
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/exhaustiveness-unreachable-pattern.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:13:9
   |
LL |         (2,) => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:19:9
   |
LL |         (1 | 2,) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:24:9
   |
LL |         (1, 3) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:25:9
   |
LL |         (1, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:26:9
   |
LL |         (2, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:27:9
   |
LL |         (2 | 1, 4) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:29:9
   |
LL |         (1, 4 | 5) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:34:9
   |
LL |         (Some(1),) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:35:9
   |
LL |         (None,) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:40:9
   |
LL |         ((1..=4,),) => {}
   |         ^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:45:14
   |
LL |         (1 | 1,) => {}
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:52:15
   |
LL |             | 0] => {}
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:50:15
   |
LL |             | 0
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:60:10
   |
LL |         [1
   |          ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:66:14
   |
LL |         Some(0
   |              ^

error: aborting due to 16 previous errors

